# workshop_rust_tests_solutions

./: README.md
exercise0/test_env/: Cargo.toml
exercise1/calculation_test/: Cargo.toml
exercise1/calculation_test/src/: lib.rs
exercise2/mock_test/: Cargo.toml
exercise2/mock_test/src/: lib.rs
exercise3/integration_test/src/: lib.rs
exercise3/integration_test/tests/: integration_test.rs
