[package]
name = "mock_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "sync"] }
wiremock = "0.6.2"
googletest = "0.13.0"
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = "0.12.12"


